adding pagebuilder and context provider

--- a/public/index.html
+++ b/public/index.html
@@ -3,21 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="./assets/logo.png"/>
-    <meta name="description" content="World of Whispers; Dark Chaos."/>
+    <meta name="description" content=""/>
     <meta name="keywords" content="" />
-    <meta name="og:title" content="World of Whispers; Dark Chaos."/>
-    <meta name="og:description" content="Fantasy RPG; World of Whispers; Dark Chaos."/>
-    <meta name="og:keywords" content="World of Whispers; Dark Chaos." />
+    <meta name="og:title" content=""/>
+    <meta name="og:description" content=""/>
+    <meta name="og:keywords" content="" />
     <meta name="og:image" content="./assets/logo.png"/>
-    <meta name="og:url" content="https://www.wowdc.online"/>
+    <meta name="og:url" content=""/>
     <meta name="og:type" content="website"/>
     <meta name="og:locale" content="en_US"/>
-    <meta name="og:site_name" content="World of Whispers; Dark Chaos."/>
+    <meta name="og:site_name" content=""/>
     <meta name="twitter:card" content="summary_large_image"/>
-    <meta name="twitter:title" content="World of Whispers; Dark Chaos."/>
-    <meta name="twitter:description" content="Fantasy RPG; World of Whispers; Dark Chaos."/>
+    <meta name="twitter:title" content=""/>
+    <meta name="twitter:description" content=""/>
     <meta name="twitter:image" content="./assets/logo.png"/>
-    <meta name="twitter:url" content="https://www.wowdc.online"/>
+    <meta name="twitter:url" content=""/>
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -26,7 +26,7 @@
       rel="stylesheet"
       crossorigin
     />
-    <title>World of Whispers; Dark Chaos.</title>
+    <title></title>
   </head>
   <body>
     <div id="root"></div>
